# vanessa_socket

./: .cvsignore  .hgignore  .hgtags  AUTHORS  ChangeLog  INSTALL.in  Makefile.am  NEWS  README  TODO  acconfig.h  autogen.sh  cflags  configure.ac  configure.in  libvanessa_socket1.spec.in  libvanessa_socket2.spec.in  vanessa-socket.pc.in  vanessa_socket-0.0.0.lsm  vanessa_socket-0.0.1.lsm  vanessa_socket-0.0.2.lsm  vanessa_socket-0.0.3.lsm  vanessa_socket-0.0.4.lsm  vanessa_socket-0.0.5.lsm  vanessa_socket-0.0.6.lsm  vanessa_socket-0.0.7.lsm  vanessa_socket.spec.in
debian/: Makefile  Makefile.am  changelog  control  copyright  libvanessa-socket-dev.dirs  libvanessa-socket-dev.files  libvanessa-socket-pipe.files  libvanessa-socket.files  libvanessa-socket0.files  libvanessa-socket0.postinst  libvanessa-socket0.shlibs  libvanessa-socket1.files  libvanessa-socket1.shlibs  libvanessa-socket2.files  libvanessa-socket2.postinst  libvanessa-socket2.shlibs  rules  shlibs.local
libvanessa_socket/: .cvsignore  Makefile.am  vanessa_socket.h  vanessa_socket_client.c  vanessa_socket_daemon.c  vanessa_socket_handler.c  vanessa_socket_host.c  vanessa_socket_host_port.c  vanessa_socket_logger.c  vanessa_socket_logger.h  vanessa_socket_pipe.c  vanessa_socket_port.c  vanessa_socket_server.c
vanessa_gethostbyname/: .cvsignore  Makefile.am  vanessa_gethostbyname.1  vanessa_gethostbyname.c
vanessa_socket_pipe/: .cvsignore  Makefile.am  Makefile.in  options.c  options.h  vanessa_socket_pipe.1  vanessa_socket_pipe.c  vanessa_socket_pipe_config.h.in
