######################################################################
# Makefile.am                                                 May 2000
# Horms                                             horms@vergenet.net
# Verge Systems International                     http://vergenet.net/
#
# Released under the terms of the GNU General Public Licence
######################################################################

SUBDIRS = libvanessa_socket @pipe_dir@

EXTRA_DIST = \
configure \
configure.in \
README \
TODO \
vanessa_socket.spec.in \
vanessa_socket.spec

m4datadir = $(datadir)/aclocal
