######################################################################
# Makefile.am                                            February 2000
# Horms                                             horms@vergenet.net
#
# vanessa_socket
# Library to simplify handling of TCP sockets
# Copyright (C) 1999-2002  Horms
# 
# This library is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
# 
# This library is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
# 
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307
# USA
#
######################################################################

SUBDIRS = libvanessa_socket @pipe_dir@ debian

EXTRA_DIST = \
configure \
configure.in \
README \
TODO \
INSTALL.in \
INSTALL \
vanessa_socket.spec.in \
vanessa_socket.spec

clean-local:
	rm -f build-stamp
